<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">History in Paderborn</string>
    <string name="title_activity_main">History in Paderborn</string>
    <string name="title_activity_display_single_image">Detailansicht</string>
    <string name="title_activity_display_image_slider">Zeitachsenansicht</string>
    <string name="title_activity_route">Routen</string>
    <string name="title_activity_route_filter">Routenfilter</string>

    <string name="menu_activity_route_filter">Filter</string>

    <string name="route_tag_label">Tags</string>
    <string name="route_tag_close_without_save_label">Ohne Speichern Schließen</string>
    <string name="route_tag_close_with_save_label">Speichern und Schließen</string>

    <plurals name="route_activity_duration_minutes">
        <item quantity="one">%d Minute</item>
        <item quantity="other">%d Minuten</item>
    </plurals>
    <string name="title_activity_route_details">Routendetails</string>
    <string name="route_activity_details_start">Tour beginnen</string>
    <string name="route_activity_duration">Dauer:\u0020</string>
    <string name="route_activity_distance">Distanz:\u0020</string>
    <string name="route_activity_distance_kilometer">%s km</string>
    <string name="route_activity_description">Beschreibung</string>
    <string name="route_activity_title">Titel</string>

    <string name="splash_screen_loading">Historisches Paderborn wird geladen.</string>
    <string name="splash_screen_waiting">Einen Moment bitte…</string>
    <string name="splash_screen_retry">Erneut versuchen</string>
    <string name="splash_screen_no_connection">Keine Internetverbindung.</string>
    <string name="splash_screen_no_connection_error_message">Bitte stellen Sie sicher, dass Sie über eine aktive Internetverbindung verfügen.</string>
    <string name="splash_screen_check_connection">Prüfe Internetverbindung.</string>

    <!-- string for route navigation -->
    <string name="drawer_open">Öffne Navigation</string>
    <string name="drawer_close">Schließe Navigation</string>
    <string name="departure">Abfahrt</string>
    <string name="via_point">Wegpunkt</string>
    <string name="destination">Ziel</string>
    <string name="start_point">"Startpunkt in"</string>
    <string name="step">Schritt</string>
    <string name="itinerary_markers_title">Route Via-Punkte</string>
    <string name="route">Route</string>
    <string name="no_route">Keine mögliche Route hier</string>
    <string name="empty_route">Route ist leer</string>
    <string name="technical_issue">Technische Probleme eine Route zu bekommen</string>
    <string name="download_road">Straße herunterladen…</string>
    <string name="creating_map">Erstellen der Karte…</string>
    <string name="osm_contributors">&#169; OpenStreetMap contributors</string>

    <string name="map_quest_key">WRWdd9j02K8tGtERI2LtFiCLsRUKyJnJ</string>

    <!-- string for GPSTracker -->
    <string name="gps_settings">GPS Einstellungen</string>
    <string name="settings">Einstellungen</string>
    <string name="cancel">Abbrechen</string>
    <string name="gps_not_enabled_message">GPS ist nicht aktiviert. Wollen Sie das Einstellungsmenü öffnen?</string>

    <!-- string for network connection -->
    <string name="network_connection">Netzwerkverbindung</string>
    <string name="network_message">Internetverbindung erforderlich</string>

    <!-- Strings for licensing -->
    <string name="licensing_title">Lizenzen</string>
    <string name="licensing_google_material_title_text">Material Icons</string>
    <string name="licensing_google_material_body_text">Von <a href="https://design.google.com/icons/">Google</a>, lizensiert unter <a href="https://creativecommons.org/licenses/by/4.0/">CC-BY 4.0</a>. Es wurden keine Änderungen vorgenommen.</string>
    <string name="licensing_osmdroid_title_text">osmdroid</string>
    <string name="licensing_osmdroid_body_text">Von <a href="https://github.com/osmdroid/osmdroid">osmdroid</a>, lizensiert unter <a href="https://raw.githubusercontent.com/osmdroid/osmdroid/master/LICENSE">Apache License 2.0</a>. Es wurden keine Änderungen vorgenommen.</string>
    <string name="licensing_osmbonuspack_title_text">OSMBonusPack</string>
    <string name="licensing_osmbonuspack_body_text">Von <a href="https://github.com/MKergall/osmbonuspack">MKergall</a>, lizensiert unter <a href="https://raw.githubusercontent.com/MKergall/osmbonuspack/master/LICENSE.md">GNU Lesser General Public License 3.0 (LGPL 3.0)</a> (ohne §5.d und §5.e). Es wurden keine Änderungen vorgenommen.</string>
    <string name="licensing_couchbase_title_text">Couchbase-Lite-Android</string>
    <string name="licensing_couchbase_body_text">Von <a href="https://github.com/couchbase/couchbase-lite-android">Couchbase</a>, lizensiert unter <a href="https://raw.githubusercontent.com/couchbase/couchbase-lite-android/master/LICENSE.TXT">Apache License 2.0</a>. Es wurden keine Änderungen vorgenommen.</string>
    <string name="licensing_mapicons_title_text">Map Icons</string>
    <string name="licensing_mapicons_body_text">Von <a href="https://mapicons.mapsmarker.com/">Maps Icons Collection</a>, lizensiert unter <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA 3.0</a>. Es wurden keine Änderungen vorgenommen.</string>
    <string name="licensing_photoview_title_text">PhotoView</string>
    <string name="licensing_photoview_body_text">Von <a href="https://github.com/chrisbanes/PhotoView">ChrisBanes</a>, lizensiert unter <a href="https://raw.githubusercontent.com/chrisbanes/PhotoView/master/LICENSE">Apache License 2.0</a>. Es wurden keine Änderungen vorgenommen.</string>

    <string name="action_audio">Audio</string>

    <!-- Strings for the audio toolbar captions -->
    <string name="audio_toolbar_play_pause">Play/Pause</string>
    <string name="audio_toolbar_progress">Fortschritt</string>
    <string name="audio_toolbar_cc">Untertitel</string>

    <!-- blind text -->
    <string name="lorem_100_words">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>

    <string name="close">Schließen</string>

    <string name="audio_playing_indicator">Playing Audio</string>
    <string name="audio_pausing_indicator">Pausing Audio</string>

    <string name="after_christ">n. Chr.</string>
    <string name="fragment_exhibitpage_image_button_text">Zeige Umrisse</string>

    <string name="information">Informationen</string>

    <string name="currently_no_further_info">Zurzeit sind keine weiteren Informationen verfügbar!</string>
    <string name="page">Seite</string>


    <string-array name="nav_drawer_entries">
        <item>Übersicht</item>
        <item>Routen</item>
        <item>@string/licensing_title</item>
    </string-array>

</resources>
