<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.upb.hip.mobile.activities.LicensingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/licensingGoogleMaterialTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/licensing_googleMaterial_title_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/licensingGoogleMaterialBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/licensing_googleMaterial_body_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/licensingOSMDroidTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/licensing_osmdroid_title_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/licensingOSMDroidBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/licensing_osmdroid_body_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/licensingOSMBonusPackTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/licensing_osmbonuspack_title_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/licensingOSMBonusPackBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/licensing_osmbonuspack_body_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/licensingCouchbaseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/licensing_couchbase_title_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/licensingCouchbaseBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/licensing_couchbase_body_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
</RelativeLayout>
