<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="de.upb.hip.mobile.activities.RouteDetailsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/activityRouteDetailsRouteImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/activityRouteDetailsRouteTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Large Text"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/activityRouteDetailsRouteDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Medium Text"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/activityRouteDetailsRouteDurationLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/route_activity_duration"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/activityRouteDetailsRouteDuration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Medium Text"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/activityRouteDetailsRouteTagsLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <de.upb.hip.mobile.helpers.GenericMapView
                    android:id="@+id/map_route_details"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />

                <TextView
                    android:id="@+id/osm_contributors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/osm_contributors"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
            </RelativeLayout>

            <Button
                android:id="@+id/activityRouteDetailsRouteStartButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/route_activity_details_start"
                />
        </LinearLayout>
    </RelativeLayout>
    <!-- The navigation drawer -->
    <include layout="@layout/navigation_drawer"/>
</android.support.v4.widget.DrawerLayout>
